scrollbar fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    overflow-x: hidden
+}
+
+
 .px10 {
     padding-left: 10%;
     padding-right: 10%;
